--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/my-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Hello, I'm Jake Castor, Frontend Developer">
+  <meta property="og:title" content="Jake - Frontend Developer" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://portfolio-jakecastor09.vercel.app/" />
   <title>Jake - Frotend Developer</title>
 </head>
 
